--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-
+	<head>
+        <link rel="stylesheet" href="./index.css">
+    </head>
 	<body>
-
-		<script type="application/json" src="app.js"></script>
+		<div id="root"></div>
+		
+		<script type="module" src="./pages/main.jsx"></script>
 	</body>
 
 </html>
